cif/org.eclipse.escet.cif.tests/tests/checks/VarNoDiscWithMultiInitValuesCheck.cif.check.err
WARNING: File "checks/VarNoDiscWithMultiInitValuesCheck.cif": Semantic warning at line 15, column 12: Discrete variable "a.v_default" is not used anywhere in the specification.
WARNING: File "checks/VarNoDiscWithMultiInitValuesCheck.cif": Semantic warning at line 16, column 12: Discrete variable "a.v1" is not used anywhere in the specification.
WARNING: File "checks/VarNoDiscWithMultiInitValuesCheck.cif": Semantic warning at line 17, column 12: Discrete variable "a.v2" is not used anywhere in the specification.
WARNING: File "checks/VarNoDiscWithMultiInitValuesCheck.cif": Semantic warning at line 18, column 12: Discrete variable "a.v3" is not used anywhere in the specification.
WARNING: File "checks/VarNoDiscWithMultiInitValuesCheck.cif": Semantic warning at line 19, column 12: Discrete variable "a.v_any" is not used anywhere in the specification.
WARNING: File "checks/VarNoDiscWithMultiInitValuesCheck.cif": Semantic warning at line 20, column 12: Discrete variable "a.vx" is not used anywhere in the specification.
ERROR: CIF checks tester failed due to unsatisfied preconditions:
  --------------------------------------------------------------
  (1/2) Discrete variable has multiple potential initial values.
  --------------------------------------------------------------
   * In automaton "a":
     - disc int v2 in {2, 3};
                ^
     - disc int v3 in {4, 5, 6};
                ^
  ----------------------------------------------------------------------------------------
  (2/2) Discrete variable has multiple potential initial values (any value in its domain).
  ----------------------------------------------------------------------------------------
   * In automaton "a":
     - disc int v_any in any;
                ^
